--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\Program Files\\Java\\ojdbc11.jar"
+        "c:\\Program Files\\Java\\ojdbc11.jar",
+        "c:\\Program Files\\Java\\jdatepicker-1.3.4.jar"
     ]
 }
